# androideguiext

./: Cargo.toml  README.md  build.rs  classes.dex  config.sh  runner.sh
.github/workflows/: build.yml
src/: bridge.rs  input.rs  main.rs  renderer.rs
src/android/: mod.rs  runtime.rs  util.rs
src/dex/: mod.rs  util.rs
src/jni/: jni_result_ext.rs  mod.rs
xdl-rs/: Cargo.toml  build.rs
xdl-rs/src/: ffi.rs  lib.rs
