[package]
name = "android-egui-ext"
version = "0.1.0"
edition = "2024"
[dependencies]
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
anyhow = "1.0.100"
egui = { version = "0.33.3", features = ["serde"] }
egui_glow = { version = "*", default-features = false }
glow = "0.16.0"
jni = "0.21.1"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libc = "0.2.180"
ndk = { version = "0.9.0", default-features = false, features = [
  "nativewindow",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
xdl-rs = { path = "xdl-rs" }

[workspace]
members = ["xdl-rs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
